# WITIVE-RAG-AGENT

./: .env.example  .gitignore  .importlinter  .mcp.json  CLAUDE.md  README.md  pyproject.toml  vulture_whitelist.py  work_rule.md
.claude/: SETUP.md  settings.json
.claude/agents/: implementer.md  kpi-tester.md  planner.md  qa-tester.md  tdd-runner.md
.claude/commands/: harness.md  review-check.md  rubric.md  spec-new.md  spec.md
.claude/scripts/: generate_report.py  inject_completion_directive.py  load_nearest_work_rule.py  log_token_usage.py  post_edit_check.py  post_stop_orchestrator.py  update_work_rule.py
.claude/skills/adr-generator/: SKILL.md
.claude/skills/code-rubric/: SKILL.md
.claude/skills/docs-sync/: SKILL.md
.claude/skills/load-test/: SKILL.md
.claude/skills/prompt-injection-test/: SKILL.md
.claude/skills/ragas-eval/: SKILL.md
.claude/skills/runbook-from-alarm/: SKILL.md
.claude/skills/send-email/: SKILL.md
.claude/skills/token-cost-estimator/: SKILL.md
app/: CLAUDE.md  work_rule.md
app/api/: CLAUDE.md  work_rule.md
app/domain/: work_rule.md
app/infra/: work_rule.md
app/pipeline/: CLAUDE.md  work_rule.md
docs/: 00-scope.md  01-architecture.md  02-query-pipeline.md  03-document-pipeline.md  04-data-stores.md  05-llm-bedrock.md  06-api.md  07-multitenancy-and-access.md  08-resilience.md  09-observability.md  10-config-and-secrets.md  11-testing.md  12-coding-conventions.md  13-glossary.md  README.md
docs/operations/: README.md
docs/operations/adr/: 0001-pinecone-asyncio-client.md  0002-staging-vector-id-prefix-swap.md  0003-epoch-invalidation.md  0004-executive-post-filter.md  0005-sse-starlette-not-fastapi-native.md  0006-bootstrap-dependencies.md  0007-uuid7-for-request-id.md  README.md
docs/operations/runbooks/: README.md  bedrock-outage.md  dlq-message-handling.md  redis-outage.md
docs/operations/sop/: README.md  secret-rotation.md  tenant-onboarding.md
kpi/: .gitkeep
specs/: README.md
src/app/: __init__.py  main.py
src/app/api/: __init__.py  _dependencies.py  _error_handlers.py  _middleware.py  _security.py  documents.py  health.py  work_rule.md
src/app/domain/: CLAUDE.md  __init__.py  access.py  audit.py  document.py  errors.py  job.py  parsed.py  tenant.py
src/app/infra/: CLAUDE.md  __init__.py  _base.py  embeddings.py  neo4j.py  pinecone.py  redis.py  s3.py  sqs.py  work_rule.md
src/app/pipeline/: __init__.py  upload.py  work_rule.md
src/app/platform/: CLAUDE.md  __init__.py  config.py  logging.py  work_rule.md
src/app/workers/: CLAUDE.md  __init__.py  work_rule.md
tests/: _factories.py  conftest.py
tests/fakes/: __init__.py  _filter.py  fake_embeddings.py  fake_neo4j.py  fake_pinecone.py  fake_redis.py  fake_s3.py  fake_sqs.py
tests/unit/: test_error_handler.py  test_errors.py  test_health.py  test_smoke.py
tests/unit/api/: test_documents_upload.py
tests/unit/domain/: test_access.py  test_audit.py  test_document.py  test_job.py  test_parsed.py  test_tenant.py
tests/unit/fakes/: __init__.py  test_fake_embeddings.py  test_fake_neo4j.py  test_fake_pinecone.py  test_fake_redis.py  test_fake_s3.py  test_fake_sqs.py  test_protocol_compliance.py
tests/unit/infra/: test_protocols.py
tests/unit/pipeline/: test_upload_use_case.py
