[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "witive-rag-ai"
version = "0.1.0"
description = "WITIVE Knowledge AI — LLM·RAG FastAPI microservice"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "structlog>=24.4",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-json-logger>=2.0",
    "uuid7>=0.1.0",
    "python-multipart>=0.0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "freezegun>=1.5",
    "ruff>=0.7",
    "mypy>=1.13",
    "import-linter>=2.1",
]

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "S", "C4", "ASYNC", "SIM", "ARG", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI uses Header/Form/File/Depends as argument default-value sentinels;
# they are not regular mutable calls — suppress B008 project-wide.
extend-immutable-calls = [
    "fastapi.Header",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["src", "tests"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
asyncio_mode = "auto"
addopts = "--cov=src/app --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
omit = ["tests/*"]

# ---------------------------------------------------------------------------
# Vulture — dead-code detection
# ---------------------------------------------------------------------------
# vulture_whitelist.py lists all parameter names that appear only in
# @runtime_checkable Protocol stubs.  They are intentionally "unused"
# (Protocol methods have `...` bodies) and are NOT dead code.
# paths includes the whitelist so vulture uses it as a reference scan.
[tool.vulture]
# paths includes vulture_whitelist.py so its dummy references suppress
# module-level names; ignore_names covers Protocol stub parameters that
# vulture flags as "unused variable" because the method body is `...`.
paths = ["src", "tests", "vulture_whitelist.py"]
min_confidence = 80
ignore_decorators = ["@runtime_checkable", "@dataclass", "@pytest.fixture"]
ignore_names = [
    # EmbeddingsAdapter Protocol stubs
    "texts", "model",
    # Neo4jAdapter / Transaction Protocol stubs
    "cypher", "params", "work",
    # PineconeAdapter Protocol stubs
    "vector", "top_k", "filter", "include_metadata",
    "vectors", "vector_ids", "vector_id",
    # RedisAdapter / RedisPipeline Protocol stubs
    "ttl_s",
    # S3Adapter Protocol stubs
    "body", "content_type", "sse_kms_key_id", "byte_range",
    "if_match", "prefix", "max_keys", "src_key", "dst_key", "body_iterator",
    # SqsAdapter Protocol stubs
    "queue_url", "deduplication_id", "max_messages",
    "visibility_timeout_s", "wait_time_s", "receipt_handle",
]
